Fixed text squish for small screens

--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -175,6 +175,7 @@
     
     }
 
+
 }
 
 
@@ -313,3 +314,31 @@
     }
     
 } 
+
+
+@media (prefers-color-scheme: dark) {
+
+
+    .me::-webkit-scrollbar {
+        width: 7px;
+        height: 10px;
+      }
+      
+    .me::-webkit-scrollbar-thumb {
+        height: 6px;
+        background-clip: padding-box;
+        background-color: rgba(0, 0, 0);
+        -webkit-border-radius: 7px;
+        
+    }
+        
+    .me::-webkit-scrollbar-button {
+        display: block;
+        width: 5px;
+        height: 5px;
+    }
+        
+    .me::-webkit-scrollbar-corner {
+        background-color: transparent;
+    }
+}
