--- a/src/pages/Project.module.css
+++ b/src/pages/Project.module.css
@@ -109,7 +109,6 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     height: 100%;
     width: 50%;
 }
@@ -125,8 +124,7 @@
 
     color:aliceblue;
     font-size: 1.0em;
-    line-height: 0.2em;
-    padding: 0.3em;
+    
 }
 
 .scope{
@@ -134,8 +132,7 @@
    
     color:aliceblue;
     font-size: 0.7em;
-    line-height: 0.2em;
-    padding: 0.1em;
+
 
 
 }
@@ -203,9 +200,13 @@
     .card{
 
    
-        height: 13%;
-      
+        height: 13%;      
         
+    }
+
+    .textContainer{
+
+        margin-left: 15%;
     }
 
     .supertext{
@@ -287,7 +288,7 @@
 
 }
 
-/*
+
 @media (max-width: 35.5em){
 
     
@@ -296,6 +297,7 @@
 
     
         height: 350%;
+        margin: 0 auto;
     
     
     }
@@ -305,6 +307,11 @@
         height: 28%;
         width: 90%;
 
+    }
+
+    .textContainer h2{
+
+        font-size: 3.0em;
     }
 
 
@@ -329,4 +336,4 @@
 
 
 }
- */
+
